# website

./: .env.example  .gitignore  README.md  blog.html  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt
Backup/: index.html
Backup/assets/: index-CPuToF1Y.css  index-iFk1ET_M.js
__MACOSX/: index.html
__MACOSX/css/tailwind/: tailwind.min.css
app/: main.py
app/api/v1/: contact.py  router.py
app/core/: settings.py
app/db/: session.py
app/db/models/: contact.py
app/schemas/: contact.py
assets/: About-DdpSveo0.js  BlogSection-CpF1oYji.js  Footer-D66tdR6-.js  Products-DSy__N9K.js  TestimonialSection-BELhPuLP.js  index-BLp1YH95.css  index-NtDLayiM.js  shield-check-DAn1IZ9W.js
tests/: conftest.py  test_contact_api.py  test_health.py
ui/: index.html
ui/assets/: Contact-BJP68sCU.js  Footer-D66tdR6-.js  WhyChoose-hlRIzbTO.js  bot-vYOpLKLY.js  headphones-oK4YX0BH.js  mail-BrqiY_0o.js
